// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications should render 1`] = `
<div>
  <div>
    <div
      class="p-6 mb-5 border-2 border-theme-neutral-200 text-md rounded-xl text-theme-neutral-700"
    >
      You have no notifications at this time.
    </div>
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
    <div
      class="my-3 border-2 border-b border-theme-neutral-100"
    />
    <div>
      <div
        class="sc-AxjAm deEstu"
        height="80"
        width="200"
      >
        <svg>
          placeholder.svg
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications should render plugins 1`] = `
<div>
  <div>
    <div
      class="text-sm font-bold text-theme-neutral-500"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-2"
                >
                  -
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr>
            <td
              class="w-8"
            >
              <div
                class="flex p-2 mr-4 rounded-lg bg-logo"
              >
                <img
                  alt="ARK Explorer"
                  src="/static/media/ark-logo.bafd72bb.png"
                />
              </div>
            </td>
            <td>
              <span
                class="font-bold text-md text-theme-neutral-600"
              >
                ARK Explorer
              </span>
              <span
                class="text-md text-theme-neutral-600"
              >
                 
                - update v2.5.6
              </span>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="notifications__plugin-action"
              >
                Update now
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="-mb-2 text-sm font-bold mt-9 text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-2"
                >
                  -
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</div>
`;

exports[`Notifications should render transactions 1`] = `
<div>
  <div>
    <div
      class="text-sm font-bold text-theme-neutral-500"
    >
      Transactions
    </div>
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-2"
                >
                  -
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <div
      class="-mb-2 text-sm font-bold mt-9 text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ dyYkHQ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral-500"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-2"
                >
                  -
                </div>
                <div
                  class="flex items-center text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-20 py-4 mt-1"
            >
              <div
                class="flex"
              >
                <div
                  class="sc-AxhCb jSOIkt border-theme-success-300 text-theme-success-400 -mr-1"
                >
                  <div
                    class="sc-AxjAm hoUaGk"
                    height="40"
                    width="40"
                  >
                    <svg>
                      received.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gxxcVQ"
                  data-testid="Avatar"
                >
                  <div
                    class="overflow-hidden w-full h-full rounded-full"
                  >
                    <img
                      alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                      title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate align-middle"
              >
                <span
                  class="text-theme-neutral-800 max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="sc-AxiKw bOTXee text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusX…GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhUy eCrePA"
                color="success"
              >
                100 BTC
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
